# Android2OpenCV

./: .gitignore  CMakeLists.txt  README.md  h264.cpp  h264.h  main.cpp
src/: h264.cpp  h264.h  main.cpp
